--- a/css/main.css
+++ b/css/main.css
@@ -349,10 +349,22 @@ h4
 	font-size: 18px;
 	padding-bottom: 15px;
 }
+@media only screen and (max-width : 425px)
+{
+	.main{
+		font-size: 15px;
+	}
+}
 
 .text_info
 {
 	font-size: 15px;
+}
+@media only screen and (max-width : 425px)
+{
+	.text_info {
+		font-size: 12px;
+	}
 }
 
 .violet
