--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ input,button
 	color: white;
 }
 
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 930px)
 {
 	.nav_logo2
 	{
@@ -84,13 +84,13 @@ nav
 	display: block;
 
 }
-@media only screen and (max-width : 768px)
+
+@media only screen and (max-width : 767px)
 {
 	.nav_menu
 	{
 		background-color: #47303d;
 		z-index: 10;
-		float: right;
 	}
 }
 
@@ -121,7 +121,7 @@ nav
 	display: inline-block;
 }
 
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 767px)
 {
 	.nav_menu li 
 	{
@@ -140,7 +140,7 @@ nav
     background: white;
 }
 
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 930px)
 {
 	.nav_menu_link:hover:after, .nav_menu_link.active:after
 	{
@@ -169,10 +169,24 @@ nav
 header
 {
 	margin-top: 0;
-	height: 100vh;
+	height: 70vh;
 	background-image: url("../img/overlay.jpg");
 	background-size: cover;
 	background-position: center;
+}
+
+@media only screen and (max-width : 1024px)
+{
+	header {
+		height: 50vh;
+	}
+}
+
+@media only screen and (max-width : 820px)
+{
+	header {
+		height: 70vh;
+	}
 }
 
 .text_header
@@ -183,21 +197,36 @@ header
 	margin: 15% 0 0 5%;
 
 }
+
 @media only screen and (max-width : 768px)
 {
 	.text_header
 	{
-		margin: 15% 0 0;
+		width: 100%;
+		margin: 150px 0 0;
+		right: auto;
 		text-align: center;
 	}
 }
 
+@media only screen and (max-width : 600px)
+{
+	.text_header {
+		margin-top: 80px;
+	}
+}
 
 h1
 {
 	color: white;
 	font-size: 50px;
 	font-weight: 300;
+}
+@media only screen and (max-width : 600px)
+{
+	h1 {
+		font-size: 30px;
+	}
 }
 .header_btn
 {
@@ -217,6 +246,13 @@ h1
 	font-weight: 100;
 }
 
+@media only screen and (max-width : 768px)
+{
+	.header_btn
+	{
+		margin-top: 50px;
+	}
+}
 .btn_box
 {
 	float: right;
@@ -229,6 +265,13 @@ h1
 		float: none;
 	}
 }
+@media only screen and (max-width : 300px)
+{
+	.header_btn {
+		padding: 7px 7px;
+	}
+}
+
 .text
 {
 	display: block;
@@ -251,6 +294,14 @@ h1
 
 }
 
+@media only screen and (max-width : 450px)
+{
+	.info_grey
+	{
+		font-size: 12px;
+		
+	}
+}
 .row
 {
 	padding-top: 40px;
@@ -274,6 +325,13 @@ h3
 	margin: 0 20%;
 }
 
+@media only screen and (max-width : 400px)
+{
+	.pink {
+		margin: 0 20px;
+	}
+}
+
 h2
 {
 	font-size: 35px;
@@ -283,14 +341,20 @@ h2
 
 .pink_btn
 {
+	padding: 7px 50px;
 	cursor: pointer;
 	-webkit-border-radius: 20px;
 	border-radius: 20px;
-	width: 250px;
 	font-size: 18px;
 	margin-top: 20px;
 	color: #b94256;
 
+}
+@media only screen and (max-width : 320px)
+{
+	.pink_btn {
+		padding: 7px 7px;
+	}
 }
 
 .text_pink
@@ -314,11 +378,24 @@ h2
 	{
 		background-position: center;
 		background-size: cover;
+		height: 30vh;
 		color: black;
 		
 	}
 }
+@media only screen and (max-width : 820px)
+{
+	.notes {
+		height: 50vh;
+	}
+}
 
+@media only screen and (max-width : 460px)
+{
+	.notes {
+		height: 70vh;
+	}
+}
 h4
 {
 	font-weight: 900;
@@ -332,13 +409,21 @@ h4
 	margin: 50px;
 }
 
+@media only screen and (max-width : 1200px)
+{
+	.notes_info
+	{
+		width: 35%;
+	}
+}
+
 @media only screen and (max-width : 1024px)
 {
 	.notes_info
 	{
 		float: none;
 		width: 100%;
-		height: 70vh;
+		height: 50vh;
 		margin: 0;
 		padding: 10px 20px 0;
 		background-color: rgba(255, 255, 255, 0.5);
@@ -350,9 +435,9 @@ h4
 	font-size: 18px;
 	padding-bottom: 15px;
 }
-@media only screen and (max-width : 425px)
+@media only screen and (max-width : 450px)
 {
-	.main{
+	.main {
 		font-size: 15px;
 	}
 }
@@ -361,10 +446,10 @@ h4
 {
 	font-size: 15px;
 }
-@media only screen and (max-width : 425px)
+@media only screen and (max-width : 450px)
 {
 	.text_info {
-		font-size: 12px;
+		font-size: 14px;
 	}
 }
 
@@ -380,6 +465,13 @@ h4
 	padding-bottom: 100px;
 }
 
+@media only screen and (max-width : 400px)
+{
+	.box_violet {
+		margin: 0 20px;
+	}
+}
+
 .violet_info
 {
 	padding: 80px 0 0;
@@ -388,6 +480,7 @@ h4
 	background-position: center;
 	text-align: center;
 }
+
 .violet_btn
 {
 	margin: 15px;
@@ -399,6 +492,16 @@ h4
 	border: none;
 	color: white;
 	font-size: 18px;
+}
+
+@media only screen and (max-width : 320px)
+{
+	.violet_btn {
+		padding: 7px 7px;
+	}
+	.violet_info {
+		padding: 0;
+	}
 }
 
 .text_violet
@@ -414,6 +517,13 @@ h4
 	background-position: center;
 	background-size: cover;
 	color: white;
+}
+
+@media only screen and (max-width : 1024px)
+{
+	.author_section {
+		height: 70vh;
+	}
 }
 
 .photo
@@ -437,7 +547,7 @@ h4
 {
 	padding-top: 260px;
 	padding-left: 50px;
-	height: 20%;
+	height: 30%;
 	width: 50%;
 }
 
@@ -456,6 +566,14 @@ h4
 	font-size: 40px;
 }
 
+@media only screen and (max-width : 400px)
+{
+	.text_about
+	{
+		font-size: 30px;
+	}
+}
+
 .img_text
 {
 	padding-top: 10%;
@@ -463,10 +581,16 @@ h4
 
 .img_block
 {
-	width: 400px;
+	width: 40%;
 	height: 30px;
 	float: left;
 	text-align: center;
+}
+@media only screen and (max-width : 600px)
+{
+	.img_block {
+		width: 80%;
+	}
 }
 
 .notes2
@@ -481,6 +605,7 @@ h4
 {
 	.notes2
 	{
+		height: 30vh;
 		background-position: center;
 		background-size: cover;
 		color: black;
@@ -488,12 +613,18 @@ h4
 	}
 }
 
-
 .notes_info2
 {
-	width: 45%;
+	width: 40%;
 	float: left;
 	margin: 50px;
+}
+@media only screen and (max-width : 1200px)
+{
+	.notes_info2
+	{
+		width: 35%;
+	}
 }
 @media only screen and (max-width : 1024px)
 {
@@ -501,13 +632,31 @@ h4
 	{
 		float: none;
 		width: 100%;
-		height: 70vh;
+		height: 30vh;
 		margin: 0;
 		padding: 10px 20px 0;
 		background-color: rgba(255, 255, 255, 0.6);
 	}
 }
+@media only screen and (max-width : 820px)
+{
+	.notes, .notes_info, .notes2, .notes_info2 {
+		height: 50vh;
+	}
+}
+@media only screen and (max-width : 630px)
+{
+	.notes, .notes_info, .notes2, .notes_info2 {
+		height: 70vh;
+	}
+}
 
+@media only screen and (max-width : 365px)
+{
+	.notes, .notes_info, .notes2, .notes_info2 {
+		height: 90vh;
+	}
+}
 footer
 {
 	background-color: #b94256;
@@ -522,8 +671,11 @@ footer
 	margin: 30px 0 0 30px;
 }
 
-@media only screen and (max-width : 530px)
+@media only screen and (max-width : 540px)
 {
+	footer {
+		height: 30vh;
+	}
 	.footer_text
 	{
 		float: none;
@@ -542,22 +694,26 @@ h5
 }
 @media only screen and (max-width : 425px)
 {
-	.h5 {
+	h5 {
 		font-size: 15px;
 	}
 }
-
+@media only screen and (max-width : 320px)
+{
+	.h5 {
+		font-size: 12px;
+	}
+}
 .social
 {
 	padding: 50px 20px 0 0;
 }
 
-@media only screen and (max-width : 530px)
+@media only screen and (max-width : 540px)
 {
 	.social
 	{
 		text-align: center;
-		
 	}
 }
 
